Finished base for about page, fixed height issue on mobile, Improved config and lang utils Update index.php, config.php, and 8 more files...

--- a/resources/NibblePoker/scss/site/base.scss
+++ b/resources/NibblePoker/scss/site/base.scss
@@ -7,12 +7,15 @@
 /* Site > Base > Layout > Root */
 
 html, body {
+	// Do not use 100vh !
+	// See: https://stackoverflow.com/a/59020698
+	
 	min-width: 100vw;
-	min-height: 100vh;
+	min-height: 100%;
 	width: 100vw !important;
-	height: 100vh !important;
+	height: 100% !important;
 	max-width: 100vw;
-	max-height: 100vh;
+	max-height: 100%;
 }
 
 /* Site > Base > Layout > Main Grid */
