--- a/resources/NibblePoker/scss/site/image.scss
+++ b/resources/NibblePoker/scss/site/image.scss
@@ -10,6 +10,11 @@
 	height: 1em;
 }
 
+.img-profile {
+	width: 7.5rem;
+	height: 7.5rem;
+}
+
 .sidebar-entry > i {
 
 }
